[project]
name = "slippery-random-maze"
version = "0.1.0"
description = ""
authors = [
    {name = "MikhailovBair",email = "bair1209@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium (>=1.0.0,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
